// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildGalaxyInfo(extractGalaxyRow(...)) > matches the SDSS golden 1`] = `
{
  "absoluteMagG": -15.465320470665322,
  "agnClass": undefined,
  "bands": {
    "g": "g",
    "i": "i",
    "r": "r",
    "u": "u",
    "z": "z",
  },
  "catalogues": [
    {
      "href": "https://skyserver.sdss.org/dr18/VisualTools/quickobj?objId=1237668",
      "label": "SDSS Explorer",
    },
  ],
  "colours": [
    {
      "label": "u−g",
      "value": 0.7000007629394531,
    },
    {
      "label": "g−r",
      "value": 0.5,
    },
    {
      "label": "r−i",
      "value": 0.2999992370605469,
    },
    {
      "label": "i−z",
      "value": 0.20000076293945312,
    },
  ],
  "dec": 53.300774799510116,
  "decSexagesimal": "+53°18'02.8"",
  "diameterKpc": 42,
  "diameterProvenance": "SDSS petroR50_r",
  "displayName": "SDSS J041344.38+531802.7",
  "distanceMpc": 37.416573867739416,
  "earthEra": "before the dinosaurs went extinct",
  "famous": undefined,
  "galaxyType": {
    "category": "blue",
    "description": "Blue, star-forming galaxy (likely spiral or irregular)",
  },
  "hubbleVelocityKmS": 3687.4471118906436,
  "iauName": "SDSS J041344.38+531802.7",
  "index": 0,
  "lookbackGyr": 0.16972567864319124,
  "magG": 17.399999618530273,
  "magI": 16.600000381469727,
  "magR": 16.899999618530273,
  "magU": 18.100000381469727,
  "magZ": 16.399999618530273,
  "morphology": undefined,
  "objID": 1237668n,
  "orientation": {
    "axisRatio": 0.699999988079071,
    "positionAngleDeg": 35,
    "provenance": "SDSS exp+deV blend",
  },
  "ra": 63.43494882292201,
  "raSexagesimal": "04h13m44.39s",
  "redshift": 0.012299999594688416,
  "source": 1,
  "sourceLabel": "SDSS",
  "thumbnailUrl": "https://skyserver.sdss.org/dr18/SkyServerWS/ImgCutout/getjpeg?ra=63.43494882292201&dec=53.300774799510116&scale=1.85222816618584&width=200&height=200",
  "type": "galaxyCatalog",
  "x": 10,
  "y": 20,
  "z": 30,
}
`;

exports[`buildGalaxyInfo(extractGalaxyRow(...)) > matches the famous golden 1`] = `
{
  "absoluteMagG": -15.465320470665322,
  "agnClass": undefined,
  "bands": {
    "g": "g",
    "i": "i",
    "r": "r",
    "u": "u",
    "z": "z",
  },
  "catalogues": [
    {
      "href": "https://ned.ipac.caltech.edu/byname?objname=M31",
      "label": "NED",
    },
    {
      "href": "https://en.wikipedia.org/wiki/NGC_224",
      "label": "Wikipedia",
    },
  ],
  "colours": [
    {
      "label": "u−g",
      "value": 0.7000007629394531,
    },
    {
      "label": "g−r",
      "value": 0.5,
    },
    {
      "label": "r−i",
      "value": 0.2999992370605469,
    },
    {
      "label": "i−z",
      "value": 0.20000076293945312,
    },
  ],
  "dec": 53.300774799510116,
  "decSexagesimal": "+53°18'02.8"",
  "diameterKpc": 42,
  "diameterProvenance": "fallback (30 kpc)",
  "displayName": "Andromeda Galaxy",
  "distanceMpc": 37.416573867739416,
  "earthEra": "before the dinosaurs went extinct",
  "famous": {
    "commonName": "Andromeda Galaxy",
    "description": "desc",
    "id": "m31",
    "names": [
      "M31",
      "NGC 224",
    ],
    "type": "SBb",
  },
  "galaxyType": {
    "category": "blue",
    "description": "Blue, star-forming galaxy (likely spiral or irregular)",
  },
  "hubbleVelocityKmS": 3687.4471118906436,
  "iauName": "Famous J041344.38+531802.7",
  "index": 0,
  "lookbackGyr": 0.16972567864319124,
  "magG": 17.399999618530273,
  "magI": 16.600000381469727,
  "magR": 16.899999618530273,
  "magU": 18.100000381469727,
  "magZ": 16.399999618530273,
  "morphology": "Barred spiral (SBb)",
  "objID": 224n,
  "orientation": {
    "axisRatio": 0.699999988079071,
    "positionAngleDeg": 35,
    "provenance": "deterministic fallback",
  },
  "ra": 63.43494882292201,
  "raSexagesimal": "04h13m44.39s",
  "redshift": 0.012299999594688416,
  "source": 4,
  "sourceLabel": "Famous",
  "thumbnailFallbackUrl": "https://alasky.cds.unistra.fr/hips-image-services/hips2fits?hips=CDS%2FP%2FDSS2%2Fcolor&ra=63.43494882292201&dec=53.300774799510116&fov=0.10290156478810222&width=128&height=128&format=jpg",
  "thumbnailUrl": "/images/famous-thumb/m31.webp",
  "type": "galaxyCatalog",
  "x": 10,
  "y": 20,
  "z": 30,
}
`;
